...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authHeaderGuide">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/menuLoginButton"
            android:layout_width="250dp"
            android:layout_height="78dp"
            android:background="@drawable/square_button_blue"
            android:fontFamily="serif"
            android:insetTop="0dp"
            android:insetBottom="0dp"
...
